--- a/src/assets/scss/utils/variables.scss
+++ b/src/assets/scss/utils/variables.scss
@@ -2,8 +2,8 @@
 $font-size-default: 16;
 
 $ff-Roboto: 'Roboto', sans-serif;
-$ff-RobotoCondensed: 'Roboto Condensed', sans-serif;
-$ff-OpenSans: 'Open Sans', sans-serif;
+$ff-Roboto-Condensed: 'Roboto Condensed', sans-serif;
+$ff-Open-Sans: 'Open Sans', sans-serif;
 $ff-Playfair: 'Playfair Display', serif;
 
 
@@ -29,4 +29,4 @@ $text-black: #0A0B0C;
 // $time-slower: 500ms;
 
 // # container
-$container-max-width: 1180;
+$container-max-width: 1200;
