--- a/src/assets/scss/utils/variables.scss
+++ b/src/assets/scss/utils/variables.scss
@@ -12,6 +12,7 @@ $ff-Playfair: 'Playfair Display', serif;
 $bg-color: #0A0B0C;
 $accent-color: #F99D49;
 $secondary-color: #93ABCF;
+$black: #000;
 
 $text-white: #fff;
 $text-black: #0A0B0C;
