--- a/src/assets/scss/utils/variables.scss
+++ b/src/assets/scss/utils/variables.scss
@@ -10,6 +10,7 @@ $ff-Playfair: 'Playfair Display', serif;
 // # colors
 
 $bg-color: #0A0B0C;
+$modal-bg: rgba(73, 87, 106, 0.8);
 $accent-color: #F99D49;
 $secondary-color: #93ABCF;
 $black: #000;
