--- a/src/assets/scss/utils/variables.scss
+++ b/src/assets/scss/utils/variables.scss
@@ -6,18 +6,16 @@ $ff-Roboto-Condensed: 'Roboto Condensed', sans-serif;
 $ff-Open-Sans: 'Open Sans', sans-serif;
 $ff-Playfair: 'Playfair Display', serif;
 
-
 // # colors
 
-$bg-color: #0A0B0C;
+$bg-color: #0a0b0c;
 $modal-bg: rgba(73, 87, 106, 0.8);
-$accent-color: #F99D49;
-$secondary-color: #93ABCF;
+$accent-color: #f99d49;
+$secondary-color: #93abcf;
 $black: #000;
 
 $text-white: #fff;
-$text-black: #0A0B0C;
-
+$text-black: #0a0b0c;
 
 // # paths
 // $fonts-path: '/fonts';
