Feat: validation remake

--- a/src/assets/scss/components/btn.scss
+++ b/src/assets/scss/components/btn.scss
@@ -1,9 +1,15 @@
 .btn {
   background-color: $accent-color;
   border-radius: em(12);
+
   &--secondary {
     background-color: $secondary-color;
   }
+
+  &--disabled {
+    opacity: 0.25;
+  }
+
   &__text {
     @include rbc-20-500;
     &--dark {
